--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <!-- Logo -->
       <a href="#homepage" class="flex items-center gap-2 hover:opacity-80 transition">
   <img class="w-8 rounded-full" src="./images/logo portfolio 1.jpg" alt="Logo" />
-  <span class="text-2xl font-bold">Portwind</span>
+  <span class="text-2xl font-bold">Portfolio</span>
 </a>
 
 
@@ -100,18 +100,36 @@
       </div>
     </div>
 
-    <!-- About Me Box -->
-    <div class="mt-12 lg:mt-0 p-6 md:p-8 bg-white dark:bg-gray-700 rounded-lg shadow-lg max-w-md">
-      <h2 class="text-2xl font-bold text-indigo-900 dark:text-indigo-300">Hi, I'm Moses</h2>
-      <p class="mt-2 text-gray-600 dark:text-gray-300">
-        With over 2 years of experience in web design and development.
-      </p>
-      <a
-        class="mt-4 inline-block bg-indigo-600 text-white text-xl px-6 py-3 rounded-full font-semibold transition hover:bg-indigo-700"
-        href="#contact"
-        >Hire Me</a
-      >
-    </div>
+   <!-- About Me Text Box -->
+<div class="mt-12 lg:mt-0 p-6 md:p-8 bg-white dark:bg-gray-700 rounded-lg shadow-lg max-w-md text-center md:text-left">
+  <h2 class="text-2xl font-bold text-indigo-900 dark:text-indigo-400">Hi, I'm Moses</h2>
+  <p class="mt-2 text-gray-600 dark:text-gray-300">
+    With over 2 years of experience in web design and development.
+  </p>
+  <a
+    class="mt-4 inline-block bg-indigo-600 text-white text-xl px-6 py-3 rounded-full font-semibold transition hover:bg-indigo-700"
+    href="#contact"
+  >
+    Hire Me
+  </a>
+
+  <!-- 🌐 Social Links -->
+  <div class="flex justify-center md:justify-start gap-4 mt-5 text-indigo-600 text-2xl">
+    <a href="https://github.com/Moses361" target="_blank" class="hover:text-indigo-800">
+      <i class="fab fa-github"></i>
+    </a>
+    <a href="https://www.linkedin.com/in/moses361/" target="_blank" class="hover:text-indigo-800">
+      <i class="fab fa-linkedin-in"></i>
+    </a>
+    <a href="https://twitter.com/" target="_blank" class="hover:text-indigo-800">
+      <i class="fab fa-twitter"></i>
+    </a>
+    <a href="https://instagram.com/" target="_blank" class="hover:text-indigo-800">
+      <i class="fab fa-instagram"></i>
+    </a>
+  </div>
+</div>
+
   </div>
 </section>
 
@@ -122,7 +140,7 @@
       <div class="relative">
         <img class="absolute top-0 left-0 w-24 h-24" src="./images/dots image.png" alt="Decorative Dots" />
         <div class="h-full rounded-full overflow-hidden">
-          <img class="w-full h-64 object-cover rounded-lg" src="./images/potrait image.jpeg" alt="Portrait" />
+          <img class="w-full h-64 object-cover rounded-lg" src="./images/profile.jpg" alt="Portrait" />
         </div>
       </div>
 
@@ -132,7 +150,7 @@
         <h2 class="text-3xl font-medium">Better Experience</h2>
         <p class="text-gray-500">
           I design and build digital products. I'm a multidisciplinary creator
-          with over 10 years of experience in a wide range of design disciplines.
+          with over 3 years of experience in a wide range of design disciplines.
         </p>
       </div>
     </div>
@@ -179,16 +197,16 @@
 
     <div class="flex flex-wrap justify-center gap-6 p-5">
       <div class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg p-5 bg-white">
-        <img class="w-full h-64 object-cover rounded-lg" src="./images/project 2.jpeg" alt="Project 2" />
+        <img class="w-full h-64 object-cover rounded-lg" src="./images/works 2.png" alt="Project 2" />
       </div>
       <div class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg p-5 bg-white">
-        <img class="w-full h-64 object-cover rounded-lg" src="./images/project 5.jpg" alt="Project 5" />
+        <img class="w-full h-64 object-cover rounded-lg" src="./images/work 4.png" alt="Project 5" />
       </div>
       <div class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg p-5 bg-white">
-        <img class="w-full h-64 object-cover rounded-lg" src="./images/projects 4.jpeg" alt="Project 4" />
+        <img class="w-full h-64 object-cover rounded-lg" src="./images/works 3.png" alt="Project 4" />
       </div>
       <div class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg p-5 bg-white">
-        <img class="w-full h-64 object-cover rounded-lg" src="./images/project 6.jpg" alt="Project 6" />
+        <img class="w-full h-64 object-cover rounded-lg" src="./images/works 5.png" alt="Project 6" />
       </div>
     </div>
   </section>
@@ -214,29 +232,89 @@
         Send Message
       </button>
     </form>
+    <!-- Extra Social Links in Contact Section -->
+<div class="flex justify-center gap-6 mt-8 text-indigo-600 text-3xl" class="hover:text-indigo-800 transition transform hover:scale-110"
+>
+  <a href="https://github.com/Moses361" target="_blank" class="hover:text-indigo-800">
+    <i class="fab fa-github"></i>
+  </a>
+  <a href="https://www.linkedin.com/in/moses361/" target="_blank" class="hover:text-indigo-800">
+    <i class="fab fa-linkedin-in"></i>
+  </a>
+  <a href="https://twitter.com/" target="_blank" class="hover:text-indigo-800">
+    <i class="fab fa-twitter"></i>
+  </a>
+  <a href="https://instagram.com/" target="_blank" class="hover:text-indigo-800">
+    <i class="fab fa-instagram"></i>
+  </a>
+</div>
+
   </section>
 
-  <!-- Footer -->
-  <footer class="w-full bg-indigo-800 mt-10">
-    <div
-      class="container mx-auto py-5 flex flex-col md:flex-row items-center justify-between px-4 text-white"
-    >
-      <div class="flex items-center gap-2">
-        <img class="w-8 rounded-full" src="./images/logo portfolio 1.jpg" alt="Logo" />
-        <span class="text-2xl font-bold">Portwind.</span>
-      </div>
-      <span class="hidden md:block font-medium">
-        © 2025 Portwind. Designed with ♥️ by Moses.
-      </span>
-
-      <div class="flex gap-4 mt-3 md:mt-0 text-lg">
-        <a href="#" class="hover:text-indigo-300"><i class="fab fa-facebook-f"></i></a>
-        <a href="#" class="hover:text-indigo-300"><i class="fab fa-instagram"></i></a>
-        <a href="#" class="hover:text-indigo-300"><i class="fab fa-twitter"></i></a>
-        <a href="#" class="hover:text-indigo-300"><i class="fab fa-linkedin-in"></i></a>
-      </div>
+ <!-- Footer -->
+<footer class="w-full bg-indigo-800 mt-10">
+  <div
+    class="container mx-auto py-5 flex flex-col md:flex-row items-center justify-between px-4 text-white"
+  >
+    <!-- Logo and Name -->
+    <div class="flex items-center gap-2">
+      <a href="#homepage" class="flex items-center gap-2">
+        <img class="w-8 h-8 rounded-full" src="./images/logo portfolio 1.jpg" alt="Logo" />
+        <span class="text-2xl font-bold hover:text-indigo-300 transition">Portfolio.</span>
+      </a>
     </div>
-  </footer>
+
+    <!-- Copyright Text -->
+    <span class="hidden md:block font-medium text-center md:text-left">
+      © 2025 <a href="https://github.com/Moses361" target="_blank" class="text-indigo-300 hover:underline">Moses</a>.
+      Designed with ♥️ using Tailwind CSS.
+    </span>
+
+    <!-- Social Media Links -->
+    <div class="flex gap-4 mt-3 md:mt-0 text-lg">
+      <a
+        href="https://facebook.com/"
+        target="_blank"
+        class="hover:text-indigo-300 transition"
+        aria-label="Facebook"
+      >
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a
+        href="https://instagram.com/"
+        target="_blank"
+        class="hover:text-indigo-300 transition"
+        aria-label="Instagram"
+      >
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a
+        href="https://twitter.com/"
+        target="_blank"
+        class="hover:text-indigo-300 transition"
+        aria-label="Twitter"
+      >
+        <i class="fab fa-twitter"></i>
+      </a>
+      <a
+        href="https://www.linkedin.com/in/moses361/"
+        target="_blank"
+        class="hover:text-indigo-300 transition"
+        aria-label="LinkedIn"
+      >
+        <i class="fab fa-linkedin-in"></i>
+      </a>
+      <a
+        href="https://github.com/Moses361"
+        target="_blank"
+        class="hover:text-indigo-300 transition"
+        aria-label="GitHub"
+      >
+        <i class="fab fa-github"></i>
+      </a>
+    </div>
+  </div>
+</footer>
   <script src="./app.js"></script>
 </body>
 </html>
