--- a/index.html
+++ b/index.html
@@ -1,30 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Tailwind Portfolio</title>
 
   <!-- Fonts -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;400;600;800&display=swap"
-    rel="stylesheet"
-  />
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;400;600;800&display=swap" rel="stylesheet" />
 
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
 
   <!-- Font Awesome -->
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
-  />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
   <style>
     body {
       font-family: 'Nunito', sans-serif;
       scroll-behavior: smooth;
     }
+
     nav {
       position: fixed;
       top: 0;
@@ -32,34 +28,37 @@
       width: 100%;
       z-index: 50;
     }
-    .typing-cursor {
-  display: inline-block;
-  animation: blink 1s steps(2, start) infinite;
-  color: #ff5757; /* adjust color if you want */
-}
-@keyframes blink {
-  to { visibility: hidden; }
-}
 
+    .typing-cursor {
+      display: inline-block;
+      animation: blink 1s steps(2, start) infinite;
+      color: #ff5757;
+      /* adjust color if you want */
+    }
+
+    @keyframes blink {
+      to {
+        visibility: hidden;
+      }
+    }
   </style>
 </head>
 
-<body class="bg-gradient-to-t from-indigo-200 text-gray-800 dark:bg-gray-900 dark:text-gray-100 transition-colors duration-500">
+<body
+  class="bg-gradient-to-t from-indigo-200 text-gray-800 dark:bg-gray-900 dark:text-gray-100 transition-colors duration-500">
   <!-- Navbar -->
   <nav class="w-full bg-indigo-700 shadow-lg">
     <div class="container mx-auto py-5 flex justify-between items-center px-4 text-white">
       <!-- Logo -->
       <a href="#homepage" class="flex items-center gap-2 hover:opacity-80 transition">
-  <img class="w-8 rounded-full" src="./images/logo portfolio 1.jpg" alt="Logo" />
-  <span class="text-2xl font-bold">Portfolio</span>
-</a>
+        <img class="w-8 rounded-full" src="./images/logo portfolio 1.jpg" alt="Logo" />
+        <span class="text-2xl font-bold">Portfolio</span>
+      </a>
 
 
       <!-- Menu -->
-      <ul
-        id="menu"
-        class="hidden md:flex flex-col md:flex-row absolute md:static top-16 left-0 bg-indigo-700 md:bg-transparent w-full md:w-auto text-center md:text-left md:space-x-10 font-medium space-y-4 md:space-y-0 py-4 md:py-0 transition-all"
-      >
+      <ul id="menu"
+        class="hidden md:flex flex-col md:flex-row absolute md:static top-16 left-0 bg-indigo-700 md:bg-transparent w-full md:w-auto text-center md:text-left md:space-x-10 font-medium space-y-4 md:space-y-0 py-4 md:py-0 transition-all">
         <li id="hLink" class="hover:text-indigo-200"><a href="#homepage">Homepage</a></li>
         <li id="hLink" class="hover:text-indigo-200"><a href="#about">About</a></li>
         <li id="hLink" class="hover:text-indigo-200"><a href="#services">Services</a></li>
@@ -82,56 +81,53 @@
   </nav>
 
   <!-- Hero Section -->
-<section
-  id="homepage"
-  class="relative min-h-screen flex items-center justify-center p-6 bg-cover bg-center"
-  style="background-image: url('./images/man image.jpeg'); background-position: center bottom;"
->
-  <!-- Overlay -->
-  <div class="absolute inset-0 bg-gray-900 opacity-60"></div>
+  <section id="homepage"
+    class="relative min-h-screen flex items-center justify-center p-6 bg-[url('./images/background.jpg')] bg-cover bg-center">
+    <!-- Overlay -->
+    <div class="absolute inset-0 bg-gray-900 opacity-60"></div>
 
-  <!-- Content -->
-  <div class="relative z-10 flex flex-col items-center md:flex-row md:justify-between w-full max-w-7xl mt-20">
-    <!-- Text -->
-    <div class="text-white text-center md:text-left">
-      <div class="text-4xl sm:text-5xl md:text-6xl lg:text-7xl font-bold">
-        <span class="text-gray-400">Freelance</span>
-<p id="text" class="text-red-500 inline-block"></p>
+    <!-- Content -->
+    <div class="relative z-10 flex flex-col items-center md:flex-row md:justify-between w-full max-w-7xl mt-20">
+      <!-- Text -->
+      <div class="text-white text-center md:text-left">
+        <h1 class="text-4xl sm:text-5xl md:text-6xl lg:text-7xl font-bold">
+          <span class="text-gray-300">Creative</span>
+          <span class="text-red-500">Web Developer & Designer</span>
+        </h1>
       </div>
     </div>
 
-   <!-- About Me Text Box -->
-<div class="mt-12 lg:mt-0 p-6 md:p-8 bg-white dark:bg-gray-700 rounded-lg shadow-lg max-w-md text-center md:text-left">
-  <h2 class="text-2xl font-bold text-indigo-900 dark:text-indigo-400">Hi, I'm Moses</h2>
-  <p class="mt-2 text-gray-600 dark:text-gray-300">
-    With over 2 years of experience in web design and development.
-  </p>
-  <a
-    class="mt-4 inline-block bg-indigo-600 text-white text-xl px-6 py-3 rounded-full font-semibold transition hover:bg-indigo-700"
-    href="#contact"
-  >
-    Hire Me
-  </a>
+    <!-- About Me Text Box -->
+    <div
+      class="mt-12 lg:mt-0 p-6 md:p-8 bg-white dark:bg-gray-700 rounded-lg shadow-lg max-w-md text-center md:text-left">
+      <h2 class="text-2xl font-bold text-indigo-900 dark:text-indigo-400">Hi, I'm Moses</h2>
+      <p class="mt-2 text-gray-600 dark:text-gray-300">
+        With over 2 years of experience in web design and development.
+      </p>
+      <a class="mt-4 inline-block bg-indigo-600 text-white text-xl px-6 py-3 rounded-full font-semibold transition hover:bg-indigo-700"
+        href="#contact">
+        Hire Me
+      </a>
 
-  <!-- 🌐 Social Links -->
-  <div class="flex justify-center md:justify-start gap-4 mt-5 text-indigo-600 text-2xl">
-    <a href="https://github.com/Moses361" target="_blank" class="hover:text-indigo-800">
-      <i class="fab fa-github"></i>
-    </a>
-    <a href="https://www.linkedin.com/in/moses361/" target="_blank" class="hover:text-indigo-800">
-      <i class="fab fa-linkedin-in"></i>
-    </a>
-    <a href="https://twitter.com/" target="_blank" class="hover:text-indigo-800">
-      <i class="fab fa-twitter"></i>
-    </a>
-    <a href="https://instagram.com/" target="_blank" class="hover:text-indigo-800">
-      <i class="fab fa-instagram"></i>
-    </a>
-  </div>
-</div>
+      <!-- 🌐 Social Links -->
+      <div class="flex justify-center md:justify-start gap-4 mt-5 text-indigo-600 text-2xl">
+        <a href="https://github.com/Moses361" target="_blank" class="hover:text-indigo-800">
+          <i class="fab fa-github"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/moses361/" target="_blank" class="hover:text-indigo-800">
+          <i class="fab fa-linkedin-in"></i>
+        </a>
+        <a href="https://twitter.com/" target="_blank" class="hover:text-indigo-800">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="https://instagram.com/" target="_blank" class="hover:text-indigo-800">
+          <i class="fab fa-instagram"></i>
+        </a>
+      </div>
+    </div>
 
-  </div>
-</section>
+    </div>
+  </section>
 
 
   <!-- About Section -->
@@ -190,131 +186,153 @@
     <div class="container mx-auto text-center mb-10">
       <h1 class="text-indigo-600 font-bold">PORTFOLIO</h1>
       <h2 class="text-3xl font-bold">Works & Projects</h2>
-      <p class="w-full md:w-1/2 mx-auto text-gray-500">
+      <p class="w-full md:w-1/2 mx-auto text-white font-semibold text-lg" style="background-color: #1f2937;">
         I specialize in creating interactive websites for individuals and small businesses.
       </p>
+
     </div>
 
-    <div class="flex flex-wrap justify-center gap-6 p-5">
-      <div class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg p-5 bg-white">
-        <img class="w-full h-64 object-cover rounded-lg" src="./images/works 2.png" alt="Project 2" />
+    <section>
+      <h2 class="text-3xl font-bold text-center mt-8 mb-4">My Projects</h2>
+      <div class="flex flex-wrap justify-center gap-6 p-5">
+
+        <!-- Project 1 Card -->
+        <div class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg p-5 bg-white flex flex-col">
+          <img class="w-full h-64 object-cover rounded-lg" src="./images/works 2.png" alt="Project 1" />
+          <div class="mt-4 text-center flex-grow">
+            <h3 class="font-semibold text-xl text-gray-800">Community Dashboard Website</h3>
+          </div>
+          <a href="https://community-dashboard-three.vercel.app/" target="_blank" rel="noopener noreferrer"
+            class="mt-4 block w-full bg-blue-500 text-white text-center py-2 px-4 rounded-lg hover:bg-blue-600 transition-colors">
+            View Project
+          </a>
+        </div>
+
+        <!-- Project 2 Card -->
+        <div class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg p-5 bg-white flex flex-col">
+          <img class="w-full h-64 object-cover rounded-lg" src="./images/work 4.png" alt="Project 2" />
+          <div class="mt-4 text-center flex-grow">
+            <h3 class="font-semibold text-xl text-gray-800">Packers and Movers Website</h3>
+          </div>
+          <a href="https://github.com/Moses361/PAM" target="_blank" rel="noopener noreferrer"
+            class="mt-4 block w-full bg-blue-500 text-white text-center py-2 px-4 rounded-lg hover:bg-blue-600 transition-colors">
+            View Project
+          </a>
+        </div>
+
+        <!-- Project 3 Card -->
+        <div class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg p-5 bg-white flex flex-col">
+          <img class="w-full h-64 object-cover rounded-lg" src="./images/works 3.png" alt="Project 3" />
+          <div class="mt-4 text-center flex-grow">
+            <h3 class="font-semibold text-xl text-gray-800">My Portfolio Work</h3>
+          </div>
+          <a href="https://tailwindcss-six-alpha.vercel.app/" target="_blank" rel="noopener noreferrer"
+            class="mt-4 block w-full bg-blue-500 text-white text-center py-2 px-4 rounded-lg hover:bg-blue-600 transition-colors">
+            View Project
+          </a>
+        </div>
+
+        <!-- Project 4 Card -->
+        <div class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg p-5 bg-white flex flex-col">
+          <img class="w-full h-64 object-cover rounded-lg" src="./images/project 3.png" alt="Project 4" />
+          <div class="mt-4 text-center flex-grow">
+            <h3 class="font-semibold text-xl text-gray-800">Luxury Tours Website</h3>
+          </div>
+          <a href="https://luxury-tours-main-3v5l.vercel.app/ target=" _blank rel="noopener noreferrer"
+            class="mt-4 block w-full bg-blue-500 text-white text-center py-2 px-4 rounded-lg hover:bg-blue-600 transition-colors">
+            View Project
+          </a>
+        </div>
+
       </div>
-      <div class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg p-5 bg-white">
-        <img class="w-full h-64 object-cover rounded-lg" src="./images/work 4.png" alt="Project 5" />
+    </section>
+
+
+
+
+
+    <!-- Contact Section -->
+    <section id="contact" class="py-20 px-10">
+      <div class="container mx-auto text-center">
+        <h1 class="text-indigo-600 font-bold">CONTACT</h1>
+        <h2 class="text-3xl font-bold">Have a Question?</h2>
+        <p class="w-full md:w-1/2 mx-auto text-gray-500">
+          Do you have an idea? Let's discuss it and see what we can do together.
+        </p>
       </div>
-      <div class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg p-5 bg-white">
-        <img class="w-full h-64 object-cover rounded-lg" src="./images/works 3.png" alt="Project 4" />
+
+      <form class="mt-8 p-8 flex flex-col gap-5 items-center max-w-2xl mx-auto bg-white rounded-lg shadow-md">
+        <input class="p-3 w-full ring-1 ring-indigo-300 rounded-md" type="text" placeholder="Name Surname" />
+        <input class="p-3 w-full ring-1 ring-indigo-300 rounded-md" type="email" placeholder="Email" />
+        <textarea class="p-3 w-full ring-1 ring-indigo-300 rounded-md" rows="5" placeholder="Message..."></textarea>
+        <button
+          class="bg-indigo-600 text-white text-lg px-6 py-2 rounded-md font-semibold w-fit cursor-pointer hover:bg-indigo-700"
+          type="submit">
+          Send Message
+        </button>
+      </form>
+      <!-- Extra Social Links in Contact Section -->
+      <div class="flex justify-center gap-6 mt-8 text-indigo-600 text-3xl"
+        class="hover:text-indigo-800 transition transform hover:scale-110">
+        <a href="https://github.com/Moses361" target="_blank" class="hover:text-indigo-800">
+          <i class="fab fa-github"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/moses361/" target="_blank" class="hover:text-indigo-800">
+          <i class="fab fa-linkedin-in"></i>
+        </a>
+        <a href="https://twitter.com/" target="_blank" class="hover:text-indigo-800">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="https://instagram.com/" target="_blank" class="hover:text-indigo-800">
+          <i class="fab fa-instagram"></i>
+        </a>
       </div>
-      <div class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg p-5 bg-white">
-        <img class="w-full h-64 object-cover rounded-lg" src="./images/works 5.png" alt="Project 6" />
+
+    </section>
+
+    <!-- Footer -->
+    <footer class="w-full bg-indigo-800 mt-10">
+      <div class="container mx-auto py-5 flex flex-col md:flex-row items-center justify-between px-4 text-white">
+        <!-- Logo and Name -->
+        <div class="flex items-center gap-2">
+          <a href="#homepage" class="flex items-center gap-2">
+            <img class="w-8 h-8 rounded-full" src="./images/logo portfolio 1.jpg" alt="Logo" />
+            <span class="text-2xl font-bold hover:text-indigo-300 transition">Portfolio.</span>
+          </a>
+        </div>
+
+        <!-- Copyright Text -->
+        <span class="hidden md:block font-medium text-center md:text-left">
+          © 2025 <a href="https://github.com/Moses361" target="_blank"
+            class="text-indigo-300 hover:underline">Moses</a>.
+          Designed with ♥️ using Tailwind CSS.
+        </span>
+
+        <!-- Social Media Links -->
+        <div class="flex gap-4 mt-3 md:mt-0 text-lg">
+          <a href="https://facebook.com/" target="_blank" class="hover:text-indigo-300 transition"
+            aria-label="Facebook">
+            <i class="fab fa-facebook-f"></i>
+          </a>
+          <a href="https://instagram.com/" target="_blank" class="hover:text-indigo-300 transition"
+            aria-label="Instagram">
+            <i class="fab fa-instagram"></i>
+          </a>
+          <a href="https://twitter.com/" target="_blank" class="hover:text-indigo-300 transition" aria-label="Twitter">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a href="https://www.linkedin.com/in/moses361/" target="_blank" class="hover:text-indigo-300 transition"
+            aria-label="LinkedIn">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+          <a href="https://github.com/Moses361" target="_blank" class="hover:text-indigo-300 transition"
+            aria-label="GitHub">
+            <i class="fab fa-github"></i>
+          </a>
+        </div>
       </div>
-    </div>
-  </section>
-
-  <!-- Contact Section -->
-  <section id="contact" class="py-20 px-10">
-    <div class="container mx-auto text-center">
-      <h1 class="text-indigo-600 font-bold">CONTACT</h1>
-      <h2 class="text-3xl font-bold">Have a Question?</h2>
-      <p class="w-full md:w-1/2 mx-auto text-gray-500">
-        Do you have an idea? Let's discuss it and see what we can do together.
-      </p>
-    </div>
-
-    <form class="mt-8 p-8 flex flex-col gap-5 items-center max-w-2xl mx-auto bg-white rounded-lg shadow-md">
-      <input class="p-3 w-full ring-1 ring-indigo-300 rounded-md" type="text" placeholder="Name Surname" />
-      <input class="p-3 w-full ring-1 ring-indigo-300 rounded-md" type="email" placeholder="Email" />
-      <textarea class="p-3 w-full ring-1 ring-indigo-300 rounded-md" rows="5" placeholder="Message..."></textarea>
-      <button
-        class="bg-indigo-600 text-white text-lg px-6 py-2 rounded-md font-semibold w-fit cursor-pointer hover:bg-indigo-700"
-        type="submit"
-      >
-        Send Message
-      </button>
-    </form>
-    <!-- Extra Social Links in Contact Section -->
-<div class="flex justify-center gap-6 mt-8 text-indigo-600 text-3xl" class="hover:text-indigo-800 transition transform hover:scale-110"
->
-  <a href="https://github.com/Moses361" target="_blank" class="hover:text-indigo-800">
-    <i class="fab fa-github"></i>
-  </a>
-  <a href="https://www.linkedin.com/in/moses361/" target="_blank" class="hover:text-indigo-800">
-    <i class="fab fa-linkedin-in"></i>
-  </a>
-  <a href="https://twitter.com/" target="_blank" class="hover:text-indigo-800">
-    <i class="fab fa-twitter"></i>
-  </a>
-  <a href="https://instagram.com/" target="_blank" class="hover:text-indigo-800">
-    <i class="fab fa-instagram"></i>
-  </a>
-</div>
-
-  </section>
-
- <!-- Footer -->
-<footer class="w-full bg-indigo-800 mt-10">
-  <div
-    class="container mx-auto py-5 flex flex-col md:flex-row items-center justify-between px-4 text-white"
-  >
-    <!-- Logo and Name -->
-    <div class="flex items-center gap-2">
-      <a href="#homepage" class="flex items-center gap-2">
-        <img class="w-8 h-8 rounded-full" src="./images/logo portfolio 1.jpg" alt="Logo" />
-        <span class="text-2xl font-bold hover:text-indigo-300 transition">Portfolio.</span>
-      </a>
-    </div>
-
-    <!-- Copyright Text -->
-    <span class="hidden md:block font-medium text-center md:text-left">
-      © 2025 <a href="https://github.com/Moses361" target="_blank" class="text-indigo-300 hover:underline">Moses</a>.
-      Designed with ♥️ using Tailwind CSS.
-    </span>
-
-    <!-- Social Media Links -->
-    <div class="flex gap-4 mt-3 md:mt-0 text-lg">
-      <a
-        href="https://facebook.com/"
-        target="_blank"
-        class="hover:text-indigo-300 transition"
-        aria-label="Facebook"
-      >
-        <i class="fab fa-facebook-f"></i>
-      </a>
-      <a
-        href="https://instagram.com/"
-        target="_blank"
-        class="hover:text-indigo-300 transition"
-        aria-label="Instagram"
-      >
-        <i class="fab fa-instagram"></i>
-      </a>
-      <a
-        href="https://twitter.com/"
-        target="_blank"
-        class="hover:text-indigo-300 transition"
-        aria-label="Twitter"
-      >
-        <i class="fab fa-twitter"></i>
-      </a>
-      <a
-        href="https://www.linkedin.com/in/moses361/"
-        target="_blank"
-        class="hover:text-indigo-300 transition"
-        aria-label="LinkedIn"
-      >
-        <i class="fab fa-linkedin-in"></i>
-      </a>
-      <a
-        href="https://github.com/Moses361"
-        target="_blank"
-        class="hover:text-indigo-300 transition"
-        aria-label="GitHub"
-      >
-        <i class="fab fa-github"></i>
-      </a>
-    </div>
-  </div>
-</footer>
-  <script src="./app.js"></script>
+    </footer>
+    <script src="./app.js"></script>
 </body>
+
 </html>
