--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
 
         <!-- Project 3 Card -->
         <div class="w-full md:w-5/12 lg:w-1/5 shadow-xl rounded-lg p-5 bg-white flex flex-col">
-          <img class="w-full h-64 object-cover rounded-lg" src="./images/works 3.png" alt="Project 3" />
+          <img class="w-full h-64 object-cover rounded-lg" src="./images/portfolio 1.png" alt="Project 3" />
           <div class="mt-4 text-center flex-grow">
             <h3 class="font-semibold text-xl text-gray-800">My Portfolio Work</h3>
           </div>
