--- a/index.html
+++ b/index.html
@@ -87,45 +87,49 @@
     <div class="absolute inset-0 bg-gray-900 opacity-60"></div>
 
     <!-- Content -->
-    <div class="relative z-10 flex flex-col items-center md:flex-row md:justify-between w-full max-w-7xl mt-20">
-      <!-- Text -->
-      <div class="text-white text-center md:text-left">
+    <div class="relative z-10 flex flex-col items-center justify-center w-full max-w-7xl mt-20 space-y-12">
+      <!-- Title -->
+      <div class="text-white text-center">
         <h1 class="text-4xl sm:text-5xl md:text-6xl lg:text-7xl font-bold">
           <span class="text-gray-300">Creative</span>
           <span class="text-red-500">Web Developer & Designer</span>
         </h1>
       </div>
-    </div>
 
-    <!-- About Me Text Box -->
-    <div
-      class="mt-12 lg:mt-0 p-6 md:p-8 bg-white dark:bg-gray-700 rounded-lg shadow-lg max-w-md text-center md:text-left">
-      <h2 class="text-2xl font-bold text-indigo-900 dark:text-indigo-400">Hi, I'm Moses</h2>
-      <p class="mt-2 text-gray-600 dark:text-gray-300">
-        With over 2 years of experience in web design and development.
-      </p>
-      <a class="mt-4 inline-block bg-indigo-600 text-white text-xl px-6 py-3 rounded-full font-semibold transition hover:bg-indigo-700"
-        href="#contact">
-        Hire Me
-      </a>
+      <!-- About Me Text Box (Centered Version) -->
+      <div class="w-full md:w-8/12 lg:w-7/12 p-10 md:p-14 bg-white dark:bg-gray-700 rounded-2xl shadow-2xl text-center">
+        <h2 class="text-3xl md:text-4xl font-bold text-indigo-900 dark:text-indigo-400 text-center">
+          Hi, I'm Moses
+        </h2>
 
-      <!-- 🌐 Social Links -->
-      <div class="flex justify-center md:justify-start gap-4 mt-5 text-indigo-600 text-2xl">
-        <a href="https://github.com/Moses361" target="_blank" class="hover:text-indigo-800">
-          <i class="fab fa-github"></i>
+        <p class="mt-4 text-lg md:text-xl text-gray-700 dark:text-gray-300 leading-relaxed">
+          With over 2 years of hands-on experience in web design and development, I specialize in creating responsive,
+          engaging, and modern web experiences. My goal is to blend creativity with functionality — ensuring every
+          project not only looks great but performs seamlessly.
+        </p>
+
+        <a class="mt-6 inline-block bg-indigo-600 text-white text-xl px-8 py-4 rounded-full font-semibold transition hover:bg-indigo-700"
+          href="#contact">
+          Hire Me
         </a>
-        <a href="https://www.linkedin.com/in/moses361/" target="_blank" class="hover:text-indigo-800">
-          <i class="fab fa-linkedin-in"></i>
-        </a>
-        <a href="https://twitter.com/" target="_blank" class="hover:text-indigo-800">
-          <i class="fab fa-twitter"></i>
-        </a>
-        <a href="https://instagram.com/" target="_blank" class="hover:text-indigo-800">
-          <i class="fab fa-instagram"></i>
-        </a>
+
+        <!-- 🌐 Social Links -->
+        <div class="flex justify-center gap-6 mt-6 text-indigo-600 text-3xl">
+          <a href="https://github.com/Moses361" target="_blank" class="hover:text-indigo-800">
+            <i class="fab fa-github"></i>
+          </a>
+          <a href="https://www.linkedin.com/in/moses361/" target="_blank" class="hover:text-indigo-800">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+          <a href="https://twitter.com/" target="_blank" class="hover:text-indigo-800">
+            <i class="fab fa-twitter"></i>
+          </a>
+          <a href="https://instagram.com/" target="_blank" class="hover:text-indigo-800">
+            <i class="fab fa-instagram"></i>
+          </a>
+        </div>
       </div>
     </div>
-
     </div>
   </section>
 
@@ -261,7 +265,7 @@
         </p>
       </div>
 
-      <form class="mt-8 p-8 flex flex-col gap-5 items-center max-w-2xl mx-auto bg-white rounded-lg shadow-md">
+      <form class="mt-8 p-8 flex flex-col gap-5 items-center max-w-7xl mx-auto bg-white rounded-lg shadow-md">
         <input class="p-3 w-full ring-1 ring-indigo-300 rounded-md" type="text" placeholder="Name Surname" />
         <input class="p-3 w-full ring-1 ring-indigo-300 rounded-md" type="email" placeholder="Email" />
         <textarea class="p-3 w-full ring-1 ring-indigo-300 rounded-md" rows="5" placeholder="Message..."></textarea>
@@ -271,6 +275,7 @@
           Send Message
         </button>
       </form>
+
       <!-- Extra Social Links in Contact Section -->
       <div class="flex justify-center gap-6 mt-8 text-indigo-600 text-3xl"
         class="hover:text-indigo-800 transition transform hover:scale-110">
