--- a/index.html
+++ b/index.html
@@ -55,15 +55,29 @@
         <span class="text-2xl font-bold">Portfolio</span>
       </a>
 
-      <!-- Menu -->
-      <ul id="menu"
-        class="hidden md:flex flex-col md:flex-row absolute md:static top-16 left-0 bg-indigo-700 md:bg-transparent w-full md:w-auto text-center md:text-left md:space-x-10 font-medium space-y-4 md:space-y-0 py-4 md:py-0 transition-all">
-        <li class="hover:text-indigo-200"><a href="#homepage">Homepage</a></li>
-        <li class="hover:text-indigo-200"><a href="#about">About</a></li>
-        <li class="hover:text-indigo-200"><a href="#services">Services</a></li>
-        <li class="hover:text-indigo-200"><a href="#works">Works</a></li>
-        <li class="hover:text-indigo-200"><a href="#contact">Contact</a></li>
-      </ul>
+   <!-- Menu -->
+<ul
+  id="menu"
+  class="hidden md:flex flex-col md:flex-row absolute md:static top-16 left-0 bg-indigo-700 md:bg-transparent 
+         w-full md:w-auto text-center md:text-left md:space-x-10 font-medium space-y-4 md:space-y-0 
+         py-4 md:py-0 transition-all duration-300 ease-in-out"
+>
+  <li class="hLink hover:text-indigo-200 transition-colors duration-200">
+    <a href="#homepage">Homepage</a>
+  </li>
+  <li class="hLink hover:text-indigo-200 transition-colors duration-200">
+    <a href="#about">About</a>
+  </li>
+  <li class="hLink hover:text-indigo-200 transition-colors duration-200">
+    <a href="#services">Services</a>
+  </li>
+  <li class="hLink hover:text-indigo-200 transition-colors duration-200">
+    <a href="#works">Works</a>
+  </li>
+  <li class="hLink hover:text-indigo-200 transition-colors duration-200">
+    <a href="#contact">Contact</a>
+  </li>
+</ul>
 
       <!-- Dark Mode Toggle -->
       <button id="moon" class="hidden md:block text-white text-xl">
