--- a/about-us.html
+++ b/about-us.html
@@ -80,7 +80,7 @@
           <li
             class="hLink hover:text-indigo-200 transition-colors duration-200"
           >
-            <a href="index.html#contact">Contact</a>
+            <a href="contact.html">Contact</a>
           </li>
         </ul>
 
