--- a/index.html
+++ b/index.html
@@ -68,11 +68,12 @@
         <span class="text-2xl font-bold">Portfolio</span>
       </a>
 
-      <!-- Menu -->
-      <ul id="menu"
+     <!-- Menu -->
+<ul
+  id="menu"
   class="hidden md:flex flex-col md:flex-row absolute md:static top-16 left-0 bg-indigo-700 md:bg-transparent 
   w-full md:w-auto text-center md:text-left md:space-x-10 font-medium space-y-4 md:space-y-0 
-  py-4 md:py-0 transition-all duration-300 ease-in-out">
+  py-4 md:py-0 transition-all duration-300 ease-in-out transform opacity-0 md:opacity-100 md:transform-none">
 
   <li class="hLink hover:text-indigo-200 transition-colors duration-200">
     <a href="index.html#homepage">Homepage</a>
@@ -91,9 +92,10 @@
   </li>
 
   <li class="hLink hover:text-indigo-200 transition-colors duration-200">
-    <a href="index.html#contact">Contact</a>
+    <a href="contact.html">Contact</a>
   </li>
 </ul>
+
 
       <!-- Dark Mode Toggle -->
       <button id="moon" class="hidden md:block text-white text-xl">
@@ -289,17 +291,6 @@
   </div>
 </section>
 
-    <!-- View All Button -->
-    <div class="text-center mt-12">
-      <a
-        href="works.html"
-        class="inline-block bg-indigo-600 text-white px-8 py-3 rounded-full font-semibold text-lg hover:bg-indigo-700 transition"
-      >
-        View All Works
-      </a>
-    </div>
-  </section>
-
   <!-- Call to Action: View My Projects -->
 <section class="bg-indigo-700 text-white py-20 px-6 text-center">
   <div class="max-w-3xl mx-auto">
@@ -335,11 +326,11 @@
         class="p-3 w-full ring-1 ring-indigo-300 rounded-md" rows="5" placeholder="Message..."></textarea> <button
         class="bg-indigo-600 text-white text-lg px-6 py-2 rounded-md font-semibold w-fit cursor-pointer hover:bg-indigo-700"
         type="submit"> Send Message </button> </form>
-    <!-- ✅ Footer -->
+        <!-- ✅ Footer -->
     <footer class="bg-indigo-700 text-white py-6 text-center mt-20">
       <p>&copy; 2025 Moses Odhiambo. All rights reserved.</p>
     </footer>
-    <script src="./app.js"></script>
-</body>
-
+    <!-- ✅ Load your app.js here -->
+    <script src="./app.js" defer></script>
+  </body>
 </html>
