--- a/works.html
+++ b/works.html
@@ -31,8 +31,8 @@
   </head>
 
   <body class="bg-gray-50 text-gray-900">
-    <!-- ✅ Navbar -->
-    <nav class="w-full bg-indigo-700 shadow-lg fixed top-0 left-0 z-50">
+    <!-- Navbar -->
+    <nav class="w-full bg-indigo-700 shadow-lg">
       <div
         class="container mx-auto py-5 flex justify-between items-center px-4 text-white"
       >
@@ -52,32 +52,28 @@
         <!-- Menu -->
         <ul
           id="menu"
-          class="hidden flex-col md:flex md:flex-row absolute md:static top-16 left-0 bg-indigo-700 md:bg-transparent w-full md:w-auto text-center md:text-left md:space-x-10 font-medium space-y-4 md:space-y-0 py-4 md:py-0 transition-all duration-300 ease-in-out"
+          class="hidden md:flex flex-col md:flex-row absolute md:static top-16 left-0 bg-indigo-700 md:bg-transparent w-full md:w-auto text-center md:text-left md:space-x-10 font-medium space-y-4 md:space-y-0 py-4 md:py-0 transition-all duration-300 ease-in-out"
         >
           <li
             class="hLink hover:text-indigo-200 transition-colors duration-200"
           >
             <a href="index.html#homepage">Homepage</a>
           </li>
-
           <li
             class="hLink hover:text-indigo-200 transition-colors duration-200"
           >
             <a href="about-us.html">About</a>
           </li>
-
           <li
             class="hLink hover:text-indigo-200 transition-colors duration-200"
           >
             <a href="index.html#services">Services</a>
           </li>
-
           <li
             class="hLink hover:text-indigo-200 transition-colors duration-200"
           >
             <a href="works.html">Works</a>
           </li>
-
           <li
             class="hLink hover:text-indigo-200 transition-colors duration-200"
           >
